Testing fix to github images not showing on github pages

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -51,7 +51,7 @@
         display: flex;
         flex-direction: column;
         min-height: 100vh;
-        background-image: url("/assets/img/ford_background.png");
+        background-image: url("../assets/img/ford_background.png");
         background-repeat: no-repeat, no-repeat;
         background-color: $darkblue;
         background-position: right bottom;
